--- a/Task2/weather-dashboard/clientside/weather-dashboard/src/pages/Home/Home.css
+++ b/Task2/weather-dashboard/clientside/weather-dashboard/src/pages/Home/Home.css
@@ -2,13 +2,14 @@
 @media screen and (max-width: 768px) {
   .home {
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 /* Main Container */
 .home {
   display: flex;
-  flex-direction: column;
   align-items: center;
   padding: 2rem;
 }
@@ -38,6 +39,7 @@ input {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   max-width: 400px;
+  flex: 1;
 }
 
 /* Map Styles using Bootstrap */
@@ -47,6 +49,8 @@ input {
   margin: 1rem;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  flex: 2;
+  margin-right: 2rem;
 }
 
 /* Footer Styles using Bootstrap */
